# A_Simple_Neural-Network

./: .gitignore  CMakeLists.txt  Journey.md  Readme.md  vcpkg.json
Data/: DataGen.py
src/: DenseLayer.cpp  DenseLayer.hpp  Gui.cpp  Gui.hpp  Helper.hpp  MlAlgorithms.cpp  MlAlgorithms.hpp  Net.cpp  Net.hpp  Network.cpp  Network.hpp  NeuralNet.cpp  NeuralNet.hpp  Neural_Net.hpp  main.cpp
